<resources>
    <string name="app_name">MedicalTracker</string>
    <string name="developer_PeterMa">Jingyuan Ma</string>
    <string name="developer_DevinDai">Devin Dai</string>
    <string name="developer_HumphreyLu">Zhonghao Lu</string>
    <string name="developer_LexiLi">Xinyang Li</string>
    <string name="developer_AnnabelleZhang">Qiaoyan Zhang</string>
    <string name="developer_YuanWang">Yuan Wang</string>
    <string name="login_text_username">UserName:</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="login_toast1">UserName cannot be empty!</string>
    <string name="login_toast2">UserName does not exist!</string>
    <string name="login_toast4">"You logged in a new device"</string>
    <string name="register_text_username">UserName:</string>
    <string name="register_text_email">Email:</string>
    <string name="register_text_birthday">Birthday:</string>
    <string name="register_text_sex">Sex:</string>
    <string name="register_text_phone">Phone:</string>
    <string name="register_text_i_am">I am:</string>
    <string name="register_text_male">Male</string>
    <string name="register_text_female">Female</string>
    <string name="register_text_patient">Patient</string>
    <string name="register_text_doctor">Doctor</string>
    <string name="register_button_sign_up">Sign up</string>
    <string name="register_toast1">Username can not be empty!</string>
    <string name="register_toast2">Username should between 8\-15 characters</string>
    <string name="register_toast3">Username contains invalid characters!</string>
    <string name="register_toast8">Phone number is not valid!</string>
    <string name="register_toast9">Email is not valid!</string>
    <string name="register_toast10">Duplicated UserName</string>
    <string name="register_toast11">Succeeded to Sign Up</string>
    <string name="register_toast12">The phone number should between 5\-16 digits!</string>
    <string name="register_toast13">Your birthday should beyond current time!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_patient_title">Search a patient</string>
    <string name="add_patient_tip">Please enter a patient\'s name:</string>
    <string name="add_patient_button_search">Search</string>
    <string name="add_patient_button_add">Add</string>
    <string name="add_patient_detail">This patient has %d problem(s)</string>
    <string name="add_patient_toast1">The patient\'s name cannot be empty!</string>
    <string name="add_patient_toast2">Cannot find any patients who has this username!</string>
    <string name="patient_page_title">Problems</string>
    <string name="patient_page_description">Description: </string>
    <string name="patient_inner_text_record">Records</string>
    <string name="patient_toast11">Doctor </string>
    <string name="patient_toast12"> has added you in his/her patients list.</string>
    <string name="patient_toast2">A problem has been deleted</string>
    <string name="patient_toast1">Network connected, your data has been updated!</string>
    <string name="patient_toast_edit">Edit is selected!</string>
    <string name="doctor_page_title">Your Patients</string>
    <string name="doctor_page_toast">Successfully deleted</string>
    <string name="doctor_page_toast2">Added a patient</string>
    <string name="doctor_page_toast3">The patient is already in your list</string>
    <string name="record_history_description">Description: </string>
    <string name="record_history_title">Records</string>
    <string name="record_history_toast1">A record has been deleted</string>
    <string name="doctor_view_page_title">Your Doctors </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle_patient">Patient</string>
    <string name="nav_header_subtitle_doctor">Doctor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_gallery">Gallery</string>
    <string name="nav_item_doctor">Doctor</string>
    <string name="nav_item_other">Other</string>
    <string name="nav_item_setting">Setting</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_qr_code">QR Code</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_album">Album</string>
    <string name="doctor_page_menu_item_detail">View Detail</string>
    <string name="doctor_page_menu_item_delete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_nickname">NickName:</string>
    <string name="change_language">Change Language</string>
    <string name="Chinese">Chinese</string>
    <string name="Japanese">Japanese</string>
    <string name="French">French</string>
    <string name="English">Canadian English</string>
    <string name="HK">Traditional Chinese(HK)</string>
    <string name="Macao">Traditional Chinese(Macao)</string>
    <string name="language_change_toast">Please re-login to apply the changing</string>
    <string name="about_title">About:</string>
    <string name="about_text_description">The application is designed and developed by organization "CMPUT301F18T4".</string>
    <string name="about_text_developer">Developer:(In no particular order)</string>
    <string name="profile_title">Your Profile:</string>
    <string name="profile_username">UserName:</string>
    <string name="profile_birthday">Birthday:</string>
    <string name="profile_sex">Sex:</string>
    <string name="profile_tel">Tel:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_address">Address:</string>
    <string name="profile_button_edit">Save</string>
    <string name="profile_toast1">Your birthday should beyond current date!</string>
    <string name="profile_toast2">Phone number is not valid!</string>
    <string name="profile_toast3">Email is not valid!</string>
    <string name="profile_toast4">Your profile has been updated</string>
    <string name="add_problem_title">Add A Problem</string>
    <string name="add_problem_problem_title">Problem Title:</string>
    <string name="add_problem_problem_date">Date Start:</string>
    <string name="add_problem_problem_description">Brief Description:</string>
    <string name="add_problem_button_add">Add</string>
    <string name="add_problem_toast">Added a new problem</string>
    <string name="add_problem_toast_time">You can not select future time</string>
    <string name="add_problem_toast_empty">The title/description cannot be empty.</string>
    <string name="edit_problem_title">Edit A Problem</string>
    <string name="edit_problem_problem_title">Problem Title:</string>
    <string name="edit_problem_problem_date">Date Start:</string>
    <string name="edit_problem_problem_description">Brief Description:</string>
    <string name="edit_problem_button_edit">Edit</string>
    <string name="edit_problem_toast">Saved changes</string>
    <string name="edit_problem_toast1">You can not select future time</string>
    <string name="edit_problem_toast2">The title or description cannot be empty.</string>
    <string name="add_record_title">Add A Record</string>
    <string name="add_record_record_title">Record Title:</string>
    <string name="add_record_record_date">Date Start:</string>
    <string name="add_record_record_description">Brief Description:</string>
    <string name="add_record_button_add">Add</string>
    <string name="add_record_body_location_hint">Choose body location</string>
    <string name="add_record_date">Pick a date</string>
    <string name="add_record_time">Pick a time</string>
    <string name="add_record_photo_hint">Current photos: </string>
    <string name="add_record_toast">An error occurs</string>
    <string name="add_record_toast2">Added a new record</string>
    <string name="add_record_toast3">You can\'t add more photos!</string>
    <string name="add_record_toast_empty">The title/description cannot be empty.</string>
    <string name="add_record_toast_body_location">You didn\'t choose body location.</string>
    <string name="add_record_toast_time">Record time cannot be before the problem time.</string>
    <string name="add_record_toast_future_time">You cannot choose a future time.</string>
    <string name="add_record_toast_photo">You need to take at least two photos.</string>
    <string name="add_record_toast_photo2">You need to take at least one front and one back body-location photo.</string>
    <string name="information_username">UserName:</string>
    <string name="information_sex">Sex:</string>
    <string name="information_email">Email:</string>
    <string name="information_TeleNo">TelephoneNo:</string>
    <string name="information_address">Address:</string>
    <string name="information_name">DisplayName:</string>
    <string name="search_tip">Please enter the keywords:</string>
    <string name="search_query_hint">Search problems or records</string>
    <string name="search_button_search">Search</string>
    <string name="search_location_button_choose_body_location">Choose Location</string>
    <string name="record_detail_location_text">Location:</string>
    <string name="register_button_birthday">Set birthday</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="search_toast1">No results found</string>
    <string name="search_toast2">You didn\'t choose a body location</string>
    <string name="doctor_record_detail_title">Record Detail</string>
    <string name="edit_doctor_record_detail">Edit Record Detail</string>
    <string name="record_title">Title:</string>
    <string name="record_date">Date Start:</string>
    <string name="record_description">Description:</string>
    <string name="doctor_comment">Comments by other doctors:</string>
    <string name="comment_button">Comment</string>
    <string name="save_button">Save</string>
    <string name="record_location">Location:</string>
    <string name="record_bodyLocation">Body Location:</string>
    <string name="upload_button">Upload Photo</string>
    <string name="location_text">No location selected</string>
    <string name="record_toast1">New edits saved</string>
    <string name="record_toast2">No photo uploads</string>
    <string name="record_toast3">This record has no location</string>
    <string name="record_toast4">You can\'t make map requests</string>
    <string name="doctor_comment_detail_title">Detailed Comments</string>
    <string name="doctor_comment_title">Add a new comment</string>
    <string name="comment_toast1">Successfully added a new comment</string>
    <string name="doctor_problem_list_title">Problems</string>
    <string name="doctor_record_list_title">Records</string>
    <string name="slide_show_button">Delete</string>
    <string name="slide_show_front">It is a front body-location photo</string>
    <string name="slide_show_back">It is a back body-location photo</string>
    <string name="common_string_no_network">Cannot connect to network!</string>
    <string name="mark_image_hint">Please click to add a point</string>
    <string name="mark_image_add">Add</string>
    <string name="mark_image_switch">Back Body Location</string>
    <string name="map_toast_1">Move around to check other marked locations.</string>
    <string name="map_toast_2">Unable to get current location</string>
    <string name="error_message">An error occurs.</string>
    <string name="body_head">Head</string>
    <string name="body_left_arm">Left Arm</string>
    <string name="body_right_arm">Right Arm</string>
</resources>