<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/profile"
            android:title="@string/nav_item_profile" />
    </group>

    <item android:title="@string/nav_item_other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_item_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_item_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/logout"
                android:title="@string/nav_item_logout" />
        </menu>
    </item>

</menu>
