<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3e1d6"
    tools:context=".Activity.DoctorRecordDetailActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/record_date"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toTopOf="@+id/textView42"
        app:layout_constraintEnd_toStartOf="@+id/dRecordDetailDate"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/dRecordDetailDate"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/dRecordDetailDescription"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dRecordDetailDescription"
        android:layout_width="348dp"
        android:layout_height="33dp"
        android:scrollbars="vertical"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="126dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/doctor_comment"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toTopOf="@+id/CommentListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dRecordDetailDescription" />

    <ListView
        android:id="@+id/CommentListView"
        android:layout_width="368dp"
        android:layout_height="223dp"
        app:layout_constraintBottom_toTopOf="@+id/doctorCommentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <Button
        android:id="@+id/doctorCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CommentListView" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_description"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toTopOf="@+id/dRecordDetailDescription"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dRecordDetailDate"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="39dp"
        android:layout_height="22dp"
        android:text="@string/record_title"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toTopOf="@+id/dRecordDetailDate"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/doctorRecordTitle"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/dRecordDetailDate"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

</android.support.constraint.ConstraintLayout>